welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: expected class or object definition
def reproMotif(){
^Array1:19: error: expected class or object definition
def Motif(){
^